<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/action_connect"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="100"
        android:title="@string/action_disconnect"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_demo"
        android:orderInCategory="100"
        android:title="@string/action_demo"
        app:showAsAction="never"/>

    <item
        android:id="@+id/setting"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never"/>


</menu>