<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ru.andrew.meteostation.MainActivity"
        android:onClick="ScreenClick"
        android:id="@+id/relative_layout">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_data"
            android:id="@+id/button_send"
            android:onClick="GetTempButtonClick"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/mode_but"
            android:layout_toStartOf="@+id/mode_but" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            android:id="@+id/mode_but"
            android:onClick="ModeBtnClk"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synchronize"
            android:id="@+id/Sync_but"
            android:onClick="BtnClk"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/button_send"
            android:layout_toStartOf="@+id/button_send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:text="@string/temp_in"
            android:textColor="#ff000000"
            android:id="@+id/textViewTI"
            android:layout_below="@+id/textViewTime"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewTO"
            android:textSize="20sp"
            android:text = "@string/temp_out"
            android:textColor="#ff000000"
            android:layout_below="@+id/textViewTI"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:text="@string/hum_in"
            android:textColor="#ff000000"
            android:id="@+id/textViewHum"
            android:layout_below="@+id/textViewTO"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pressure"
            android:textColor="#ff000000"
            android:textSize="20sp"
            android:id="@+id/textViewPress"
            android:layout_below="@+id/textViewHum"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time"
            android:id="@+id/textViewTime"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_below="@+id/Sync_but"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/right_drawer_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:visibility="visible"  >



        <ListView
            android:id="@+id/right_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="#ffffff"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <SeekBar
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:progress="0"
            android:max="100"
            android:indeterminate="false"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtPercentage"
            android:layout_below="@+id/seekBar"
            android:layout_centerHorizontal="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/brightness"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar2"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/seekBar"
            android:layout_alignEnd="@+id/seekBar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/color"
            android:id="@+id/textView3"
            android:layout_below="@+id/txtPercentage"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:id="@+id/button"
            android:layout_below="@+id/seekBar2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/seekBar2"
            android:layout_alignEnd="@+id/seekBar2"
            android:background="#000000"
            android:textColor="#ffffff" />
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>